compiler/tools/fpp-check/test/state_machine/initial_transitions/sm_choice_bad_parent_else.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/initial_transitions/sm_choice_bad_parent_else.fpp:7.3
  initial enter C1
  ^
error: initial transition of state machine may not go to a state or choice defined in a substate
transition path goes here:
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/initial_transitions/sm_choice_bad_parent_else.fpp:8.3
  choice C1 { if g enter C2 else enter S }
  ^
transition path goes here:
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/initial_transitions/sm_choice_bad_parent_else.fpp:9.3
  choice C2 { if g enter S else enter S.T }
  ^
transition path goes here:
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/initial_transitions/sm_choice_bad_parent_else.fpp:5.5
    state T
    ^
